src/main/java/com/amazingsoftware/integration/samples/arch/errors/dto/ErrorDto.java
package com.amazingsoftware.integration.samples.arch.errors.dto;

/**
 *
 *	This is the Dto which has a structure pre-shared with clients.
 *
 *  @author al.casula
 */
public class ErrorDto {
	
	private String message;

	public String getMessage() {
		return message;
	}

	public void setMessage(String message) {
		this.message = message;
	}

}
